# napari-mouse-controls

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
src/napari_mouse_controls/: _dock_widget.py
src/napari_mouse_controls/_tests/: test_dock_widget.py
