[metadata]
name = napari-mouse-controls
version = 0.1.0
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-mouse-controls
license = BSD-3-Clause
description = Control napari using a touch screen
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-mouse-control/issues
    Documentation = https://github.com/haesleinhuepf/napari-mouse-controls#README.md
    Source Code = https://github.com/haesleinhuepf/napari-mouse-controls
    User Support = https://github.com/haesleinhuepf/napari-mouse-controls/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari
    napari-tools-menu

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-mouse-controls = napari_mouse_controls
